--- a/UnitTests/EditMode/EditMode_Base.asmdef
+++ b/UnitTests/EditMode/EditMode_Base.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "EditMode",
+    "name": "EditMode_Base",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
