--- a/UnitTests/PlayMode/PlayMode_Base.asmdef
+++ b/UnitTests/PlayMode/PlayMode_Base.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Tests",
+    "name": "PlayMode_Base",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
